# stochastic_strategies

./: README.md  chords_and_progression.py  example_card.txt.txt  main.py  musical_variables.py  pyproject.toml  strategy.py
data/: transition_matrix.npy  transition_matrix_lengths.npy
docs/: notebook_insights.md  transition_matrix_methodology.md
notebooks/: explore_chordonomicon.ipynb
scripts/: fit_transition_matrix.py
stochastic_strategies/: __init__.py  main.py  music_theory.py  strategy.py
