[project]
name = "stochastic-strategies"
version = "0.1.0"
description = "A Markov-chain songwriting tool inspired by Brian Eno's Oblique Strategies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.3",
    "typer>=0.24.1",
    "numpy>=1.26",
]

[project.scripts]
stochastic-strategies = "stochastic_strategies.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["stochastic_strategies*"]
